// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 0.0588235294117647,
  },
  Object {
    "x": 1627321680000,
    "y": 0.136363636363636,
  },
  Object {
    "x": 1627321740000,
    "y": 0.0625,
  },
  Object {
    "x": 1627321800000,
    "y": 0,
  },
  Object {
    "x": 1627321860000,
    "y": 0,
  },
  Object {
    "x": 1627321920000,
    "y": 0.1,
  },
  Object {
    "x": 1627321980000,
    "y": 0,
  },
  Object {
    "x": 1627322040000,
    "y": 0,
  },
  Object {
    "x": 1627322100000,
    "y": 0.25,
  },
  Object {
    "x": 1627322160000,
    "y": 0.125,
  },
  Object {
    "x": 1627322220000,
    "y": 0,
  },
  Object {
    "x": 1627322280000,
    "y": 0,
  },
  Object {
    "x": 1627322340000,
    "y": 0,
  },
  Object {
    "x": 1627322400000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627322460000,
    "y": 0.0952380952380952,
  },
  Object {
    "x": 1627322520000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627322580000,
    "y": 0,
  },
  Object {
    "x": 1627322640000,
    "y": 0,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": 0.25,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": 0,
  },
  Object {
    "x": 1627323060000,
    "y": 0,
  },
  Object {
    "x": 1627323120000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627323180000,
    "y": 0.1,
  },
  Object {
    "x": 1627323240000,
    "y": 0.111111111111111,
  },
  Object {
    "x": 1627323300000,
    "y": 0.0909090909090909,
  },
  Object {
    "x": 1627323360000,
    "y": 0,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627322580000,
    "y": 0,
  },
  Object {
    "x": 1627322640000,
    "y": 0,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": 0.25,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": 0,
  },
  Object {
    "x": 1627323060000,
    "y": 0,
  },
  Object {
    "x": 1627323120000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627323180000,
    "y": 0.1,
  },
  Object {
    "x": 1627323240000,
    "y": 0.111111111111111,
  },
  Object {
    "x": 1627323300000,
    "y": 0.0909090909090909,
  },
  Object {
    "x": 1627323360000,
    "y": 0,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 0.0588235294117647,
  },
  Object {
    "x": 1627322580000,
    "y": 0.136363636363636,
  },
  Object {
    "x": 1627322640000,
    "y": 0.0625,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": 0.1,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": 0.25,
  },
  Object {
    "x": 1627323060000,
    "y": 0.125,
  },
  Object {
    "x": 1627323120000,
    "y": 0,
  },
  Object {
    "x": 1627323180000,
    "y": 0,
  },
  Object {
    "x": 1627323240000,
    "y": 0,
  },
  Object {
    "x": 1627323300000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627323360000,
    "y": 0.0952380952380952,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;
